# ilass

./: flake.nix
ilass-cli/: Cargo.toml
ilass-cli/examples/: generate_statistics_from_database.rs
ilass-cli/src/: errors.rs  lib.rs  main.rs  video_decoder.rs
ilass-cli/src/video_decoder/: ffmpeg_binary.rs  mod.rs
