[package]
name = "ilass-cli"
description = "CLI tool for synchronizing subtitles"
documentation = "https://docs.rs/ilass-cli"
readme = "../README.md"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "ilass"
path = "src/main.rs"

[features]
default = []
static = ["ffmpeg-next/static"]

[dependencies]
ilass.workspace = true
webrtc-vad = "0.4"
subparse = "0.7"

clap = { version = "4.5", features = ["cargo"] }
encoding_rs = "0.8"
failure = "0.1"
ffmpeg-next = { version = "7.1", default-features = false, features = ["codec", "format", "software-resampling"] }
pbr = "1.1"
serde = { version = "1.0.98", features = ["derive", "rc"] }
serde_json = "1.0"

[dev-dependencies]
rmp-serde = "1.3"
threadpool = "1.8"
ctrlc = "3.4"
